service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: sample-python-app
  ports:
    - port: 80
      targetPort: 8000
