httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-service
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - name: python-service
          port: 80
